# zyx

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CNAME  LICENSE  README.md  dividers.txt  embed.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  readme.md  requirements-docs.txt  run.py  setup.py  sitemap.xml  t.py  test.py  todo.md  zensical.toml  zyx.py
.github/: deploy_mkdocs.yml
.github/workflows/: deploy_mkdocs.yml  docs.yml  mkdocs.yml
api-reference/: index.html
common/: exceptions.py
concepts/: complete-zyx-reference.ipynb  creating-a-podcast.ipynb  document-understanding.ipynb  document_understanding.ipynb  test.py  textbook-generator.py
deprecated/: pyproject.toml
deprecated/docs/: index.md
deprecated/docs/core-concepts/: attachments.md  context.md  semantic-operations.md  tools.md
deprecated/docs/semantic-operations/: expressions.md  query.md  run.md  select.md  validate.md
deprecated/scripts/: run_readme_examples.py
deprecated/tests/: test_attachments.py  test_context.py  test_graph_ctx.py  test_processing_messages.py  test_processing_multimodal.py  test_processing_outputs.py  test_targets.py  test_utils_confidence.py
deprecated/zyx/: _aliases.py  _types.py
deprecated/zyx/_graph/: _requests.py
deprecated/zyx/_processing/: __init__.py  _messages.py
deprecated/zyx/_utils/: __init__.py  _confidence.py  _observer.py  _semantic.py
deprecated/zyx/_utils/_strategies/: _abstract.py  _attachments.py  _editable.py  _params.py
deprecated/zyx/operations/: __init__.py  parse.py  query.py  run.py  select.py  validate.py
deprecated/zyx/tools/: tool.py
docs/: api-reference.md  index.md
docs/attachments/: resources.md  snippets.md
docs/context/: memory.md  prompting.md  spans.md
docs/core-concepts/: attachments.md  context.md  resources.md  results.md  semantic-operations.md  snippets.md  targets.md  tool-use.md  tools.md
docs/examples/: agents.md  chat-completions.ipynb  completions.md  example.md  getting-started.md  memory.md  multimodal.md  pydantic-models-as-llms.ipynb  pydantic-models-as-llms.md
docs/getting-started/: installation.md
docs/quickstarts/: perplexity.ipynb
docs/reference/: chat-completions.ipynb
docs/semantic-operations/: edit.md  evaluate.md  expressions.md  make.md  parse.md  query.md  run.md  select.md  validate.md
docs/stylesheets/: extra.css  extras.css  extras.js  title-fx.js
examples/: README.md  agents.ipynb  completion.ipynb  getting-started.ipynb  head.html  llm_functions.ipynb  memory.ipynb
examples/agents/: index.html
examples/completions/: index.html
examples/example/: index.html
examples/getting-started/: index.html
examples/memory/: index.html
examples/multimodal/: index.html
examples/multumodal/: index.html
examples/semantic-operations/: make.py
examples/zyx_tools/: index.html
legacy/0.2.0x/: pyproject.toml
legacy/0.2.0x/src/zyx/: __init__.py
legacy/0.2.0x/src/zyx/ai/: __init__.py  __init__.pyi  _completion.py  _embeddings.py  _instructor_completion.py
legacy/0.2.0x/src/zyx/audio/: __init__.py
legacy/0.2.0x/src/zyx/core/: __init__.py  __init__.pyi  decorators.py  decorators.pyi  text.py  text.pyi
legacy/0.2.0x/src/zyx/data/: __init__.py  __init__.pyi  main.py
legacy/0.2.1xx/: pyproject.toml
legacy/0.2.1xx/src/zyx/: __init__.py  __init__.pyi  client.py  core.py
legacy/0.2.1xx/src/zyx/audio/: __init__.pyi
legacy/0.2.1xx/src/zyx/image/: __init__.py
llxm/: __init__.py  _cli.py  basemodel.py  code_generators.py  completions.py  console.py  exceptions.py  messages.py  multimodal.py  repl.py  structured_outputs.py  tool_calling.py  utils.py
notebooks/: agents.ipynb  getting-started.ipynb  hello_world.ipynb  hello_world.py  memory.ipynb
old/zyx/: base_client.py  batch.py  messages.py  tool_calling.py
scripts/: run_readme_examples.py
search/: search_index.json
snippets/: completion.ipynb  completion.py  openai_functions.md  openai_prompting.md
src/zyx/: __init__.py  __init__.pyi  _cli.py  _environ.py  _rich.py  _router.py  agent.py  agent.pyi  agents.py  basemodel.py  client.py  completions.py  graph.py  graph.pyi  multimodal.py
stylesheets/: extra.css  extras.css  fonts.css  markdown-fx.js  title-fx.css
tests/: simple_main_block_tester.py  test_api_resource.py  test_console.py  test_core_chat_completions_helpers_chat_messages.py  test_core_completions_processors.py  test_graph_nodes.py  test_graph_requests.py  test_lib_utils.py  test_logging.py  test_processing_messages.py  test_processing_outputs.py  test_processing_outputs_models.py  test_processing_toon.py  test_utils_outputs.py  test_utils_prettify.py  test_utils_semantic.py  test_zyx.py  test_zyx_core_litellm_resource.py  test_zyx_core_utils.py  test_zyx_utils.py  zyx_core.py
tests/core/: test_core_helpers_chat_messages.py  test_core_helpers_context.py  test_core_helpers_pydantic_models.py  test_core_helpers_tool_calling.py  test_core_tracing.py  test_core_tracing_traceable.py  test_core_tracing_tracer.py  test_core_tracing_visualizers.py  test_core_utils_chat_messages.py
tests/models/: test_model_provider_inference.py
tests/utils/: test_function_schema.py  test_utils_chat_messages.py  test_utils_prompting.py  test_utils_pydantic_models.py  test_utils_tool_calling.py
zyx/: __init__.py  __init__.pyi  _aliases.py  _apI_resource.py  _confidence.py  _exceptions.py  _logging.py  _prompt_constructor.py  _rich.py  _types.py  _utils.py  attachments.py  base_client.py  basemodel.py  batch.py  client.py  code_builders.py  completions.py  console.py  context.py  exception.py  exceptions.py  messages.py  model.py  repl.py  response_model.py  result.py  results.py  snippets.py  stream.py  targets.py  tool_calling.py  types.py  utils.py
zyx/_client/: agents.py  completion.py  memory.py  multimodal.py  terminal.py
zyx/_graph/: __init__.py  _context.py  _ctx.py  _nodes.py  _requests.py
zyx/_internal/: __init__.py  _beautification.py  _exceptions.py  _import_utils.py  _logging.py
zyx/_lib/: __init__.py  _beautification.py  _import_utils.py  _logging.py
zyx/_utils/: _outputs.py  (+2 more)
(+605 files in other folders)
