[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["zyx"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/docs",
]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "zyx"
dynamic = ["version"]
description = "ZYX"
authors = [{name = "Hammad Saeed", email = "hvmmad@gmail.com"}]
readme = "readme.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "markitdown>=0.1.4",
    "openai>=2.16.0",
    "pydantic-ai-slim>=1.58.0",
    "pydantic-monty>=0.0.4",
    "toonify>=1.6.0",
]

[project.optional-dependencies]
ai = ["pydantic-ai"]
chroma = ["chromadb"]
qdrant = ["qdrant-client[fastembed]"]

[dependency-groups]
dev = [
    "pre-commit",
    "logfire",
    "black",
    # SORT!
    "isort",
    "ruff",
    "uv",
    "pytest",
    "pytest-asyncio",
    "twine>=6.1.0",
    # type checking!
    # another banger from astral.sh
    "ty",

    # all examples use marimo in favor of jupyter because marimo
    # is very good :)
    "marimo",

    # docs (zensical is a project by the mkdocs-material team, that
    # aims to be the successor to mkdocs-material and mkdocs itself)
    "zensical",
    "mkdocstrings-python"
]

[tool.uv.build-backend]
source-exclude = ["docs*", "tests*"]
wheel-exclude = ["docs*"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
line-ending = "auto"
