[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["zyx"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/docs",
    "/tests",
    "/examples",
]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "zyx"
version = "1.1.0"
description = "ZYX"
authors = [{name = "Hammad Saeed", email = "hvmmad@gmail.com"}]
readme = "readme.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic-ai-slim>=1.58.0",
]

[project.optional-dependencies]
pydantic-ai = ["pydantic-ai"]

[dependency-groups]
dev = [
    "prek",
    "logfire",
    "black",
    # SORT!
    "isort",
    "ruff",
    "uv",
    "pytest",
    "pytest-asyncio",
    "twine>=6.1.0",
    # type checking!
    # another banger from astral.sh
    "ty",

    # all examples use marimo in favor of jupyter because marimo
    # is very good :)
    "marimo",

    # docs (zensical is a project by the mkdocs-material team, that
    # aims to be the successor to mkdocs-material and mkdocs itself)
    "zensical",
    "mkdocstrings-python"
]

[tool.uv.build-backend]
source-exclude = ["docs*", "tests*"]
wheel-exclude = ["docs*"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
line-ending = "auto"
