[tool.poetry]
name = "zyx"
version = "0.2.00"
description = "A happy little collection of other people's brilliant libraries and tools."
authors = ["Hammad Saeed <hammad@supportvectors.com>"]
packages = [{ include = "zyx", from = "src" }]
exclude = ["zyx/tests", "zyx/tests/*"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.7.1"
loguru = "^0.7.2"
marvin = "^2.3.6"
phidata = "^2.4.27"
sqlmodel = "^0.0.21"
qdrant-client = "^1.10.1"
semchunk = "^2.2.0"
docx = "^0.2.4"
pymupdf = "^1.24.9"
tiktoken = "^0.7.0"
psutil = "^6.0.0"
huggingface-hub = "^0.24.2"
ollama = "^0.3.0"
litellm = "^1.42.5"
instructor = "^1.3.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
