[tool.poetry]
name = "zyx"
version = "0.2.3"
description = "A happy little collection of other people's brilliant libraries and tools."
authors = ["Hammad Saeed <hammad@supportvectors.com>"]
packages = [{ include = "zyx", from = "src" }]
exclude = ["zyx/tests", "zyx/tests/*"]

[tool.poetry.dependencies]
python = "^3.9"
phidata = "^2.4.27"
marvin = "^2.3.6"
instructor = "^1.3.7"
litellm = "^1.42.5"
loguru = "^0.7.2"
rich = "^13.7.1"
huggingface-hub = "^0.24.3"

[tool.poetry.group.dev.dependencies]
uv = "^0.2.31"
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
